SPORT-162: add Swagger annotations
